--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "deploy": "wrangler pages deploy .vercel/output/static --project-name=hidden-walnuts"
   },
   "dependencies": {
-    "@cloudflare/next-on-pages": "latest",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "@cloudflare/next-on-pages": "^1.8.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250429.0",
-    "@types/react": "19.1.2",
-    "@types/react-dom": "latest",
-    "typescript": "latest"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.3.3"
   },
   "license": "MIT"
 }
