--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cf-pages": "next build && wrangler pages deploy .next"
+    "pages:build": "next build && npx @cloudflare/next-on-pages",
+    "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static",
+    "pages:watch": "npx @cloudflare/next-on-pages --watch",
+    "pages:dev": "npx wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -16,6 +19,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.9.0",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -25,4 +29,4 @@
     "typescript": "^5.3.3",
     "wrangler": "^3.0.0"
   }
-} 
+}
