--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,13 @@
 name = "hidden-walnuts"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
 
 [build]
 command = "npm run build"
 publish = ".next"
 
 [build.upload]
-format = "service-worker"
+format = "directory"
 
 [pages]
 pages_build_output_dir = ".next" 
