--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,8 +3,7 @@ compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
 [build]
-command = "npm run build"
-publish = ".next"
+command = "npx @cloudflare/next-on-pages@1"
 
 [build.upload]
 format = "directory"
