--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "hidden-walnuts"
 compatibility_date = "2024-01-01"
+# Required for Next.js on Cloudflare Pages
 compatibility_flags = ["nodejs_compat"]
 
 [build]
