--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "hidden-walnuts"
 compatibility_date = "2024-01-01"
-# Required for Next.js on Cloudflare Pages
+# Required for Next.js on Cloudflare Pages - trying with do_not_populate_process_env in dashboard
 compatibility_flags = ["nodejs_compat"]
 
 [build]
