--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "hidden-walnuts"
 compatibility_date = "2024-01-01"
-# Required for Next.js on Cloudflare Pages - trying with do_not_populate_process_env in dashboard
+# Required for Next.js on Cloudflare Pages - using both flags to fix node built-ins
 compatibility_flags = ["nodejs_compat"]
 
 [build]
@@ -10,4 +10,4 @@ command = "npx @cloudflare/next-on-pages@1"
 format = "directory"
 
 [pages]
-pages_build_output_dir = ".next" 
+pages_build_output_dir = ".vercel/output/static" 
